--- a/client/index.html
+++ b/client/index.html
@@ -13,12 +13,12 @@
             <p>New user?</p>
             <h1>Sign up</h1>
 
-            <form action="/rooms.html" method="POST">
+            <form>
                 <label for="name">Display name</label>
                 <input type="text" name="name" id="name" placeholder="Display name" required autocomplete="off">
                 <label for="password">Password</label>
                 <input type="password" name="password" id="password" placeholder="Password" required autocomplete="off">
-                <button type="submit">Join</button>
+                <button id="signup">Join</button>
             </form>
 
         </div>
