--- a/client/index.html
+++ b/client/index.html
@@ -15,9 +15,9 @@
 
             <form>
                 <label for="name">Display name</label>
-                <input type="text" name="name" id="name" placeholder="Display name" required autocomplete="off">
+                <input type="text" name="name" id="signName" placeholder="Display name" required autocomplete="off">
                 <label for="password">Password</label>
-                <input type="password" name="password" id="password" placeholder="Password" required autocomplete="off">
+                <input type="password" name="password" id="signPassword" placeholder="Password" required autocomplete="off">
                 <button id="signup">Join</button>
             </form>
 
@@ -29,13 +29,15 @@
         <div class="centered-form__box">
             <p>Already a user?</p>
             <h1>Log in</h1>
-            <form action="/chat.html" method="POST">
-                <label>Display name</label>
-                <input type="text" name="name" placeholder="Display name" required>
-                <label>Password</label>
-                <input type="text" name="password" placeholder="Password" required>
-                <button>Join</button>
+
+            <form>
+                <label for="name">Display name</label>
+                <input type="text" name="name" id="logName" placeholder="Display name" required autocomplete="off">
+                <label for="password">Password</label>
+                <input type="password" name="password" id="logPassword" placeholder="Password" required autocomplete="off">
+                <button id="login">Join</button>
             </form>
+
         </div>
 
         
