logica rooms acabada

--- a/client/chat.html
+++ b/client/chat.html
@@ -9,11 +9,12 @@
   <body>
 
     <div class="chat">
+      
       <div class="chat__left">
         <div id="sidebar" class="chat__sidebar"></div>
-        <div class="buttons">
-          <button>Change Room</button>
-          <button>Log out</button>  
+        <div class="buttons_box">
+          <button class="sidebar_buttons">Change Room</button>
+          <button class="sidebar_buttons">Log out</button>
         </div>
       </div>
       
@@ -30,7 +31,8 @@
         </div>
       </div>
 
-
     </div>
+
+    <script src="./js/rooms.js"></script>
   </body>
 </html>
