--- a/client/index.html
+++ b/client/index.html
@@ -14,9 +14,9 @@
             <h1>Sign up</h1>
 
             <form>
-                <label for="name">Display name</label>
+                <label for="signName">Display name</label>
                 <input type="text" name="name" id="signName" placeholder="Display name" required autocomplete="off">
-                <label for="password">Password</label>
+                <label for="signPassword">Password</label>
                 <input type="password" name="password" id="signPassword" placeholder="Password" required autocomplete="off">
                 <button id="signup">Join</button>
             </form>
@@ -31,9 +31,9 @@
             <h1>Log in</h1>
 
             <form>
-                <label for="name">Display name</label>
+                <label for="logName">Display name</label>
                 <input type="text" name="name" id="logName" placeholder="Display name" required autocomplete="off">
-                <label for="password">Password</label>
+                <label for="logPassword">Password</label>
                 <input type="password" name="password" id="logPassword" placeholder="Password" required autocomplete="off">
                 <button id="login">Join</button>
             </form>
