--- a/client/chat.html
+++ b/client/chat.html
@@ -14,8 +14,8 @@
         <div id="sidebar" class="chat__sidebar"></div>
         
         <div class="buttons_box">
-          <button class="sidebar_buttons">Change Room</button>
-          <button class="sidebar_buttons">Log out</button>
+          <button class="sidebar_buttons" id="change-room">Change Room</button>
+          <button class="sidebar_buttons" id="logout">Log out</button>
         </div>
 
       </div>
