--- a/client/index.html
+++ b/client/index.html
@@ -13,7 +13,7 @@
             <p>New user?</p>
             <h1>Sign up</h1>
 
-            <form>
+            <form id="sign-form">
                 <label for="signName">Display name</label>
                 <input type="text" name="name" id="signName" placeholder="Display name" required autocomplete="off">
                 <label for="signPassword">Password</label>
@@ -30,7 +30,7 @@
             <p>Already a user?</p>
             <h1>Log in</h1>
 
-            <form>
+            <form id="log-form">
                 <label for="logName">Display name</label>
                 <input type="text" name="name" id="logName" placeholder="Display name" required autocomplete="off">
                 <label for="logPassword">Password</label>
