--- a/client/rooms.html
+++ b/client/rooms.html
@@ -2,7 +2,7 @@
 
 <head>
     
-    <title>Document</title>
+    <title>Rooms</title>
     <!---  <link rel="icon" href="/img/favicon.png"> -->
     <link rel="stylesheet" href="css/styles.css">
 </head>
